--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
 <ul>
    <li><a href="https://github.com/{{ site.github_username }}/"><i class="icon-github icon-2x"></i><p>GitHub</p></a></li>
    <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="icon-linkedin icon-2x"></i><p>LinkedIn</p></a></li>
-   <li><a href="http://dblp.uni-trier.de/pers/hd/t/Toffola:Luca_Della"><i class="icon-leanpub icon-2x"></i><p>DBLP</p></a></li>
+   <li><a href="http://dblp.uni-trier.de/pers/hd/t/Toffola:Luca_Della"><i class="fab fa-leanpub icon-2x"></i><p>DBLP</p></a></li>
 </ul>
 </div>
 <div class="contact">
