--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
 </div>
 <div class='pull-right'>
 <ul>
-   <li><a href="https://github.com/{{ site.github_username }}/"><i class="fa fa-github fa-2x"></i><p>GitHub</p></a></li>
+   <li><a href="https://github.com/{{ site.github_username }}/"><i class="fab fa-github fa-2x"></i><p>GitHub</p></a></li>
    <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin fa-2x"></i><p>LinkedIn</p></a></li>
    <li><a href="http://dblp.uni-trier.de/pers/hd/t/Toffola:Luca_Della"><i class="fab fa-leanpub fa-2x"></i><p>DBLP</p></a></li>
 </ul>
