--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,9 +13,11 @@
 <div class="contact">
       <p>ETH Zurich - CS Department<br>
       Laboratory for Software Technology<br>
-      CAB H65 Universitätstrasse 6<br>
+      CAB H65<br>
+      Universitätstrasse 6<br>
       8092 Zürich<br>
       Switzerland<br>
    </p>
    <i><strong>E-mail:</strong> luca.dellatoffola at inf.ethz.ch<br></i>
+   <i>I'm currently looking for new research oppurtunities in industry or in academia!</i>
 </div>
