--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,5 +19,7 @@
       Switzerland<br>
    </p>
    <i><strong>E-mail:</strong> luca.dellatoffola at inf.ethz.ch<br></i>
-   <i>I'm currently looking for new research oppurtunities in industry or in academia!</i>
+    <br>
+    <br>
+    <b><i>I'm currently looking for new research oppurtunities in industry or in academia!</i></b>
 </div>
