--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,5 +21,5 @@
    <i><strong>E-mail:</strong> luca.dellatoffola at inf.ethz.ch<br></i>
     <br>
     <br>
-    <b><i>I'm currently looking for new research oppurtunities in industry or in academia!</i></b>
+    <h4><b><i>I'm currently looking for new research oppurtunities in industry or in academia!</i></b></h4>
 </div>
