--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
       <img src="/img/me.jpg" />
    </figure>
 </div>
-<div class='pull-right'>
+<div class='pull-left'>
 <ul>
    <li><a href="https://github.com/{{ site.github_username }}/"><i class="fab fa-github fa-2x"></i><p>GitHub</p></a></li>
    <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin fa-2x"></i><p>LinkedIn</p></a></li>
