--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,9 +4,7 @@
    </figure>
 </div>
 <div class='pull-left'>
-<ul>
-   <li><a href="https://github.com/{{ site.github_username }}/"><i class="fab fa-github fa-2x"></i><p>GitHub</p></a></li>
-   <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin fa-2x"></i><p>LinkedIn</p></a></li>
-   <li><a href="http://dblp.uni-trier.de/pers/hd/t/Toffola:Luca_Della"><i class="fab fa-leanpub fa-2x"></i><p>DBLP</p></a></li>
-</ul>
+<a href="https://github.com/{{ site.github_username }}/"><i class="fab fa-github fa-2x"></i><p>GitHub</p></a>
+<a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin fa-2x"></i><p>LinkedIn</p></a>
+<a href="http://dblp.uni-trier.de/pers/hd/t/Toffola:Luca_Della"><i class="fab fa-leanpub fa-2x"></i><p>DBLP</p></a>
 </div>
